* Empty segments are now handled correctly - thanks to Piotr Jastrzebski for the patch (#123)
* Fixed encoding for square brackets and less/greater than characters
* Don't apply rewrite rule to requests forwarded by URL-mappings anymore
* Fixed encoding/decoding of vertical bar (|) character
* Fixed bug that caused mappings to also match viewIds of other mappings (#128)

------------------------------------
           VERSION 3.3.2
------------------------------------

Bugfixes:
* Fixed invalid usage of Servlet 3.0 API 

------------------------------------
           VERSION 3.3.1
------------------------------------

Features & Enhancements:
* Support of query parameter and action inheritance (#75)
* Development mode can now be enabled by setting the context parameter 'com.ocpsoft.pretty.DEVELOPMENT'

Bugfixes:
* Implemented equals()/hashcode() for LazyExpression (#115)
* Performance: URLPatternParser got created on every call to UrlMapping.getPatternParser()
* Fixed incorrect handling of Spring AOP proxies during bean name lookup - thanks to mbenson for the patch #(119)
* Dynaview: Parameter injection now correctly happens before view determination (#120)
* Fixed decoding of quotation mark character. Thanks to Bruno Aranda for the patch. (#122)
* Use equals() instead of matches() to compare URL with view-id. Thanks to mbenson for bringing this up.
* Prevent rewrite loops by avoiding nested rewrites for forwarded requests (#121)
* Fixed bug causing CDIBeanNameResolver to don't reload configuration in development mode on JBoss AS7

------------------------------------
           VERSION 3.3.0
------------------------------------

Features & Enhancements:
* Performance improvements when running JSF 2.0 in project stage 'development'
* Regular expression performance improvements provided by Yann Simon.
* Ambiguous View IDs are now resolved automatically when using pretty:mappingIds in action method navigation, <h:link> and <h:button> component outcomes